# rust-clip

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  audit.toml  pwsh_install.ps1
.github/workflows/: ci.yml  client-release.yml  server-image.yml
crates/rustclip-client/: Cargo.toml
crates/rustclip-client-gui/: Cargo.toml  tauri.conf.json
crates/rustclip-client-gui/capabilities/: default.json
crates/rustclip-client-gui/icons/: icon.icns
crates/rustclip-client-gui/src/: commands.rs  history_watcher.rs  hotkey.rs  main.rs  sync_runner.rs  tray.rs  updater.rs
crates/rustclip-client/src/: clipboard.rs  clipboard_files.rs  commands.rs  config.rs  crypto.rs  files.rs  gui_api.rs  history.rs  http.rs  image_codec.rs  image_history.rs  keychain.rs  lib.rs  log_setup.rs  main.rs  sync.rs
crates/rustclip-server/: Cargo.toml
crates/rustclip-server/migrations/: 0001_init.sql  0002_blobs_user_id.sql  0003_device_token_expiry.sql
crates/rustclip-server/src/: audit.rs  bootstrap.rs  config.rs  db.rs  error.rs  main.rs  metrics.rs  middleware.rs  models.rs  password.rs  rate_limit.rs  settings.rs  state.rs  sweeper.rs  test_util.rs  tokens.rs  update_check.rs
crates/rustclip-server/src/admin/: about.rs  audit_page.rs  csrf.rs  dashboard.rs  devices.rs  login.rs  mod.rs  settings.rs  users.rs
crates/rustclip-server/src/api/: auth.rs  blobs.rs  blobs_test.rs  device_auth.rs  me.rs  mod.rs
crates/rustclip-server/src/ws/: bundle_test.rs  hub.rs  mod.rs  session.rs  sync_test.rs
crates/rustclip-server/static/: admin.js  app.css
crates/rustclip-server/templates/: _csrf.html  about.html  audit_log.html  dashboard.html  devices.html  layout.html  login.html  settings.html  user_created.html  user_password_reset.html  users.html
crates/rustclip-shared/: Cargo.toml
crates/rustclip-shared/src/: lib.rs  protocol.rs  rest.rs
docker/: Dockerfile  docker-compose.yml
docs/: operator-guide.md  threat-model.md
