[workspace]
resolver = "2"
members = [
    "crates/rustclip-shared",
    "crates/rustclip-server",
    "crates/rustclip-client",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
rustclip-shared = { path = "crates/rustclip-shared" }

anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
