[workspace]
resolver = "2"
members = [
    "crates/rustclip-shared",
    "crates/rustclip-server",
    "crates/rustclip-client",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
rustclip-shared = { path = "crates/rustclip-shared" }

anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
axum = { version = "0.8", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "time",
    "uuid",
    "macros",
    "migrate",
] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["alloc", "getrandom"] }
rand = "0.8"
askama = "0.12"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tower-http = { version = "0.6", features = ["trace", "normalize-path"] }
tower = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
http = "1"
sha2 = "0.10"
hex = "0.4"
subtle = "2"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
gethostname = "1"

# dev / test
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
