[workspace]
resolver = "2"
members = [
    "crates/rustclip-shared",
    "crates/rustclip-server",
    "crates/rustclip-client",
    "crates/rustclip-client-gui",
]

[workspace.package]
version = "0.2.1-1"
edition = "2024"
rust-version = "1.88"
license = "PolyForm-Noncommercial-1.0.0"

[workspace.dependencies]
rustclip-shared = { path = "crates/rustclip-shared" }

anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
axum = { version = "0.8", features = ["macros", "ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "time",
    "uuid",
    "macros",
    "migrate",
] }
argon2 = "0.5"
password-hash = { version = "0.5", features = ["alloc", "getrandom"] }
rand = "0.8"
askama = "0.12"
tower-sessions = "0.14"
tower-sessions-sqlx-store = { version = "0.15", features = ["sqlite"] }
tower-http = { version = "0.6", features = ["trace", "normalize-path", "set-header", "limit"] }
tower = "0.5"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
base64 = "0.22"
zeroize = { version = "1", features = ["derive"] }
http = "1"
sha2 = "0.10"
hex = "0.4"
subtle = "2"
futures-util = "0.3"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1"
clap = { version = "4", features = ["derive", "env"] }
rpassword = "7"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
gethostname = "1"
chacha20poly1305 = "0.10"
arboard = { version = "3", features = ["wayland-data-control"] }
png = "0.17"
tar = "0.4"
dirs = "5"
walkdir = "2"
toml = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }

# Native macOS pasteboard bindings for file URLs
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
    "std",
    "NSArray",
    "NSString",
    "NSURL",
    "NSDictionary",
    "NSObject",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
    "std",
    "NSPasteboard",
] }

# Native Windows bindings for CF_HDROP file-copy detection.
windows = { version = "0.58", features = [
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_Foundation",
    "Win32_UI_Shell",
] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
url = "2"

# Tauri v2 for the tray GUI client.
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-build = { version = "2", features = [] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"

# dev / test
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
