[package]
name = "rustclip-client-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rustclip-client-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build.workspace = true

[dependencies]
rustclip-client = { path = "../rustclip-client" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tauri.workspace = true
tauri-plugin-autostart.workspace = true
tauri-plugin-notification.workspace = true
tauri-plugin-opener.workspace = true
arboard.workspace = true
