[package]
name = "rustclip-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rustclip-client"
path = "src/main.rs"

[dependencies]
rustclip-shared.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
base64.workspace = true
rand.workspace = true

clap.workspace = true
reqwest.workspace = true
rpassword.workspace = true
keyring.workspace = true
gethostname.workspace = true
