[package]
name = "rustclip-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rustclip-client"
path = "src/main.rs"

[dependencies]
rustclip-shared.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
base64.workspace = true
rand.workspace = true
sha2.workspace = true
futures-util.workspace = true

clap.workspace = true
reqwest.workspace = true
rpassword.workspace = true
keyring.workspace = true
gethostname.workspace = true
argon2.workspace = true
chacha20poly1305.workspace = true
arboard.workspace = true
png.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
