[package]
name = "rustclip-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "rustclip-server"
path = "src/main.rs"

[dependencies]
rustclip-shared.workspace = true
anyhow.workspace = true
thiserror.workspace = true
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true

sqlx.workspace = true
argon2.workspace = true
password-hash.workspace = true
rand.workspace = true
askama.workspace = true
tower-sessions.workspace = true
tower-sessions-sqlx-store.workspace = true
tower-http.workspace = true
tower.workspace = true
uuid.workspace = true
time.workspace = true
base64.workspace = true
zeroize.workspace = true
http.workspace = true
sha2.workspace = true
hex.workspace = true
subtle.workspace = true
futures-util.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
